--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="text-align:justify">
   <table cellspacing="24">
     <tr>
-      <td><img src="Personal-Site\images\Mylogo.jpg" /></td>
+      <td><img src="images\Mylogo.jpg" /></td>
       <td>
         <h1>Aish Soni/Zer0Gamer</h1>
         <h3>I am a student at <a href="http://www.dpsindore.org/">DPS Indore</a> currently.</h3>
