--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
 <head>
   <meta charset="utf-8">
   <title>Aish's Personal Site</title>
+  <link rel="stylesheet" href="CSS\styles.css">
 </head>
 
-<body style="text-align:justify">
+<body>
   <table cellspacing="24">
     <tr>
       <td><img src="images\Mylogo.jpg" /></td>
       <td>
         <h1>Aish Soni/Zer0Gamer</h1>
-        <h3>I am a student at <a href="http://www.dpsindore.org/">DPS Indore</a> currently.</h3>
-        <h3>The image you see here is the first logo I made for my gaming avatar called Zer0Gamer.</h3>
+        <h4>I am a student at <a href="http://www.dpsindore.org/">DPS Indore</a> currently.</h4>
+        <h4>The image you see here is the first logo I made for my gaming avatar called Zer0Gamer.</h4>
       </td>
     </tr>
   </table>
   <hr size="4" noshade>
-  <h4>My Hobies:</h4>
+  <h3>My Hobies:</h3>
   <ol>
     <li>Gaming</li>
     <li>Doing Mathematics</li>
     <li>Graphic Designing</li>
   </ol>
-  <h4>My Favorite PC Games Recently:</h4>
+  <h3>My Favorite PC Games Recently:</h3>
   <ul>
     <li>DOOM Eternal</li>
     <li>NFS Heat</li>
