--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <tr>
       <td><img src="images\Mylogo.jpg" /></td>
       <td>
-        <h1>Aish Soni/Zer0Gamer</h1>
+        <h1>Aish Soni</h1>
         <h4>I am a student at <a href="http://www.dpsindore.org/">DPS Indore</a> currently.</h4>
         <h4>The image you see here is the first logo I made for my gaming avatar called Zer0Gamer.</h4>
       </td>
@@ -21,15 +21,18 @@
   <hr size="4" noshade>
   <h3>My Hobies:</h3>
   <ol>
-    <li>Gaming</li>
+    <li>3D Graphic Design</li>
     <li>Doing Mathematics</li>
     <li>Graphic Designing</li>
   </ol>
-  <h3>My Favorite PC Games Recently:</h3>
+  <h3>My Current Subjects in School:</h3>
   <ul>
-    <li>DOOM Eternal</li>
-    <li>NFS Heat</li>
-    <li>GTA V</li>
+    <li>Web Applications</li>
+    <li>Maths</li>
+    <li>Physics</li>
+    <li>Physical Education</li>
+    <li>English</li>
+    <li>Chemistry</li>
   </ul>
   <hr size="4" noshade>
   <h2><a href="contact.html">Contact Me</a></h2>
