--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="24">
     <tr>
-      <td><img src="images\Mylogo.jpg" /></td>
+      <td><img src="images\Background.jpg" /></td>
       <td>
         <h1>Aish Soni</h1>
         <h4>I am a student at <a href="http://www.dpsindore.org/">DPS Indore</a> currently.</h4>
