--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td>
         <h1>Aish Soni</h1>
         <h4>I am a student at <a href="http://www.dpsindore.org/">DPS Indore</a> currently.</h4>
-        <h4>The image you see here is the first logo I made for my gaming avatar called Zer0Gamer.</h4>
+        <h4>I am also preparing for JEE at present, this website I have made as project for learning Web Application.</h4>
       </td>
     </tr>
   </table>
