--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="24">
     <tr>
-      <td><img src="images\Background.jpg" /></td>
+      <td><img src="images\Background.jpg" height="184" width="184"/></td>
       <td>
         <h1>Aish Soni</h1>
         <h4>I am a student at <a href="http://www.dpsindore.org/">DPS Indore</a> currently.</h4>
@@ -21,7 +21,7 @@
   <hr size="4" noshade>
   <h3>My Hobies:</h3>
   <ol>
-    <li>3D Graphic Design</li>
+    <li>3D Graphic Design(Blender)</li>
     <li>Doing Mathematics</li>
     <li>Graphic Designing</li>
   </ol>
